--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^3.0.6",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.21.1",
+    "react-scroll": "^1.9.0"
   },
   "engines": {
     "node": ">=18"
