--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "date-fns": "^3.0.6",
+    "framer-motion": "^10.17.9",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
